about link on header

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
         <li class="<%= active_page?(map_path) ? '-active' : '' %>"><%= link_to (t 'map'), map_path %></a></li>
         <li class="<%= active_page?(countries_path) ? '-active' : '' %>"><%= link_to (t 'countries'), countries_path %></a></li>
         <!-- <li class="<%#= active_page?(cancers_path) ? '-active' : '' %>"><%#= link_to (t 'cancer_types'), cancers_path %></a></li> -->
-        <!-- <li class="<%#= active_page?(about_path) ? '-active' : '' %>"><%#= link_to (t 'about'), about_path %></a></li> -->
+        <li class="<%= active_page?(about_path) ? '-active' : '' %>"><%= link_to (t 'about'), about_path %></a></li>
         <li><img src="" class="btn-search"></li>
         <% if user_signed_in? %>
           <li class="user-avatar">
@@ -60,7 +60,7 @@
       <li class="<%= active_page?(map_path) ? '-active' : '' %>"><%= link_to (t 'map'), map_path %></a></li>
       <li class="<%= active_page?(countries_path) ? '-active' : '' %>"><%= link_to (t 'countries'), countries_path %></a></li>
       <!-- <li class="<%#= active_page?(cancers_path) ? '-active' : '' %>"><%#= link_to (t 'cancer_types'), cancers_path %></a></li> -->
-      <!-- <li class="<%#= active_page?(about_path) ? '-active' : '' %>"><%#= link_to (t 'about'), about_path %></a></li> -->
+      <li class="<%= active_page?(about_path) ? '-active' : '' %>"><%= link_to (t 'about'), about_path %></a></li>
     </ul>
     <% if user_signed_in? %>
       <ul class="menu user-profile">
