add subtitle or year to layer title on legend

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -77,5 +77,8 @@
     font-weight: bold;
     line-height: 1.4;
     color: #0f3046;
+    .extra {
+      text-transform: capitalize;
+    }
   }
 }
