Cancer types select

--- a/app/views/network_projects/new.html.erb
+++ b/app/views/network_projects/new.html.erb
@@ -21,7 +21,10 @@
     </div>
 
     <div class="project-info">
+      <h3 class="c-title">Project information</h3>
       <div id="project-website" class="form-field"></div>
+
+      <div id="cancer-types" class="form-field"></div>
     </div>
   </div>
 </div>
