Project types select

--- a/app/views/network_projects/new.html.erb
+++ b/app/views/network_projects/new.html.erb
@@ -24,6 +24,7 @@
       <h3 class="c-title">Project information</h3>
       <div id="project-website" class="form-field"></div>
 
+      <div id="project-types" class="form-field"></div>
       <div id="cancer-types" class="form-field"></div>
     </div>
   </div>
