Select with multiple options

--- a/app/assets/javascripts/templates/select.hbs
+++ b/app/assets/javascripts/templates/select.hbs
@@ -6,6 +6,7 @@
     </h3>
   {{/if}}
   <select
+    multiple={{#if multiple}}true{{else}}false{{/if}}
     name="{{#if name}}{{name}}{{/if}}"
     type="{{#if type}} {{type}} {{/if}}"
     class="{{#if inputClass}}{{inputClass}} {{/if}}"
