--- a/app/views/network_projects/new.html.erb
+++ b/app/views/network_projects/new.html.erb
@@ -26,6 +26,7 @@
 
       <div id="project-types" class="form-field"></div>
       <div id="cancer-types" class="form-field"></div>
+      <div id="funding-sources" class="form-field"></div>
     </div>
   </div>
 </div>
