Sumbit button & required fields highlighted

--- a/app/assets/javascripts/templates/input.hbs
+++ b/app/assets/javascripts/templates/input.hbs
@@ -11,4 +11,5 @@
     class="{{#if inputClass}} {{inputClass}} {{/if}}"
     placeholder="{{#if placeholder}} {{placeholder}} {{/if}}"
     value="{{#if value}} {{value}} {{/if}}"/>
+  <p class="c-required -hidden">* Field required</p>
 </div>
