--- a/app/assets/javascripts/templates/select.hbs
+++ b/app/assets/javascripts/templates/select.hbs
@@ -16,4 +16,5 @@
       <option id="add-new-{{name}}" class="add-new">Add new</option>
     {{/if}}
   </select>
+  <p class="c-required -hidden">* Field required</p>
 </div>
