--- a/app/assets/javascripts/templates/textarea.hbs
+++ b/app/assets/javascripts/templates/textarea.hbs
@@ -12,4 +12,5 @@
     placeholder="{{#if placeholder}} {{placeholder}} {{/if}}"
     value="{{#if value}} {{value}} {{/if}}" />
   </textarea>
+  <p class="c-required -hidden">* Field required</p>
 </div>
