--- a/app/views/network_projects/new.html.erb
+++ b/app/views/network_projects/new.html.erb
@@ -18,6 +18,7 @@
         <div class="end-date"></div>
         <div id="pickadate-end-container" class="pickadate-container" autofocus></div>
       </div>
+      <p class="c-required -hidden">* Both dates are required</p>
     </div>
 
     <div class="project-info">
