--- a/app/views/shared/_javascripts.html.erb
+++ b/app/views/shared/_javascripts.html.erb
@@ -1,3 +1,3 @@
-<script type="text/javascript">
-  var USER_ID = <%= current_user ? current_user.id : -1 %>;
+<script>
+  var USER_ID = <%= current_user ? current_user.id : 0 %>;
 </script>
