Add investigators to a project & delete each one

--- a/app/assets/javascripts/templates/select.hbs
+++ b/app/assets/javascripts/templates/select.hbs
@@ -6,7 +6,9 @@
     </h3>
   {{/if}}
   <select
-    multiple={{#if multiple}}true{{else}}false{{/if}}
+    {{#if multiple}}
+    multiple
+    {{/if}}
     name="{{#if name}}{{name}}{{/if}}"
     type="{{#if type}} {{type}} {{/if}}"
     class="{{#if inputClass}}{{inputClass}} {{/if}}"
