--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= I18n.locale %>">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title><%= @title ? @title + ' - ' : nil %>Global Cancer Project Map</title>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true %>
-    <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
@@ -29,7 +29,8 @@
     <% end %>
     <%= yield %>
     <%= render "shared/footer" %>
-    <%= render "shared/modal" %>
+    <%# render "shared/modal" %>
     <%= render "shared/javascripts" %>
+    <%= javascript_include_tag 'application' %>
   </body>
 </html>
