--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -1,35 +1,37 @@
-<div class="row">
-  <div class="column small-12">
-    <h2>Filters</h2>
+<form action="#">
+  <div class="row">
+    <div class="column small-12">
+      <h2>Filters</h2>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="column small-12 medium-6">
-    {{{countries}}}
+  <div class="row">
+    <div class="column small-12 medium-6">
+      {{{countries}}}
+    </div>
+    <div class="column small-12 medium-6">
+      {{{organisationsTypes}}}
+    </div>
   </div>
-  <div class="column small-12 medium-6">
-    {{{organisationsTypes}}}
+  <div class="row">
+    <div class="column small-12 medium-6">
+      <div id="cancer-types"></div>
+    </div>
+    <div class="column small-12 medium-6">
+      {{{organisations}}}
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="column small-12 medium-6">
-    <div id="input-cancerTypes"></div>
+  <div class="row">
+    <div class="column small-12 medium-6">
+      <div id="project-types"></div>
+    </div>
+    <div class="column small-12 medium-6">
+      {{{foundingSources}}}
+    </div>
   </div>
-  <div class="column small-12 medium-6">
-    {{{organisations}}}
+  <div class="row">
+    <div class="column small-12">
+      <button type="button" class="js-filter-form-cancel">Cancel</button>
+      <button type="submit" class="js-filter-form-submit">Apply</button>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="column small-12 medium-6">
-    {{{projectTypes}}}
-  </div>
-  <div class="column small-12 medium-6">
-    {{{foundingSources}}}
-  </div>
-</div>
-<div class="row">
-  <div class="column small-12">
-    <button>Cancel</button>
-    <button>Apply</button>
-  </div>
-</div>
+</form>
