--- a/app/sql_queries/events_map_points.sql.erb
+++ b/app/sql_queries/events_map_points.sql.erb
@@ -2,7 +2,7 @@ select
 events.id as event,
 events.title as title,
 countries.country_name as location_name,
-'{"type":"point","coordinates":[' || events.latitude || ',' || events.longitude || ']}' as centroid,
+'{"type":"Point","coordinates":[' || events.latitude || ',' || events.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
 countries.id as location_id,
 'point' as type
