--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -6,23 +6,47 @@
 .c-map {
   min-height: 600px;
   height: 100%;
-  z-index: 1;
   background: $color-4;
 
-  &.-map, &.-map.leaflet-container {
-    background: $color-1;
-  }
+  // &.-map, &.-map.leaflet-container {
+  //   background: $color-1;
+  // }
 
-  &.-detail, &.-detail.leaflet-container {
-    background: $color-4;
-  }
+  // &.-detail, &.-detail.leaflet-container {
+  //   background: $color-4;
+  // }
 
-  .leaflet-control-attribution {
-    display: none;
+  .leaflet-bar {
+    border-radius: 0;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.05);
 
-    @media #{$mq-tablet} {
-      display: inherit;
+    & a:first-child {
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
     }
+
+    & a:last-child {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      margin-bottom: 0;
+    }
+
+    & a,
+    & a:hover {
+      border-bottom: 0;
+      margin-bottom: 1px;
+    }
+  }
+
+  .leaflet-top {
+    top: 36px;
+  }
+
+  .leaflet-top,
+  .leaflet-bottom,
+  .leaflet-left,
+  .leaflet-right {
+    z-index: 2;
   }
 
   .prunecluster,
@@ -97,59 +121,59 @@
   }
 
   /* !important needed to force the change from the library */
-  .leaflet-popup {
-    bottom: 2px !important;
+  // .leaflet-popup {
+  //   bottom: 2px !important;
 
-    .leaflet-popup-content { margin: 0; }
+  //   .leaflet-popup-content { margin: 0; }
 
-    .leaflet-popup-content-wrapper {
-      padding: 25px 40px;
-      border-radius: 0;
-      max-height: 190px;
-      max-width: 190px;
-      overflow-y: auto;
-      font-weight: $font-weight-bold;
-    }
+  //   .leaflet-popup-content-wrapper {
+  //     padding: 25px 40px;
+  //     border-radius: 0;
+  //     max-height: 190px;
+  //     max-width: 190px;
+  //     overflow-y: auto;
+  //     font-weight: $font-weight-bold;
+  //   }
 
-    .leaflet-popup-close-button {
-      display: none;
-    }
+  //   .leaflet-popup-close-button {
+  //     display: none;
+  //   }
 
-    .people {
-      display: flex;
-      flex-flow: column;
-      text-align: center;
-    }
+  //   .people {
+  //     display: flex;
+  //     flex-flow: column;
+  //     text-align: center;
+  //   }
 
-    .person {
-      font-size: $font-size-x-small;
-      color: $color-2;
-      margin: 0;
-      margin-bottom: 12px;
+  //   .person {
+  //     font-size: $font-size-x-small;
+  //     color: $color-2;
+  //     margin: 0;
+  //     margin-bottom: 12px;
 
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
+  //     &:last-child {
+  //       margin-bottom: 0;
+  //     }
+  //   }
+  // }
 }
 
-#map-legend {
-  position: absolute;
-  top: 60px;
-  background: #fff;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.05);
-  z-index: 2;
-  padding: 10px;
-  right: 10px;
-  .legend-title {
-    font-family: Montserrat;
-    font-size: 13px;
-    font-weight: bold;
-    line-height: 1.4;
-    color: #0f3046;
-    .extra {
-      text-transform: capitalize;
-    }
-  }
-}
+// #map-legend {
+//   position: absolute;
+//   top: 60px;
+//   background: #fff;
+//   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.05);
+//   z-index: 2;
+//   padding: 10px;
+//   right: 10px;
+//   .legend-title {
+//     font-family: Montserrat;
+//     font-size: 13px;
+//     font-weight: bold;
+//     line-height: 1.4;
+//     color: #0f3046;
+//     .extra {
+//       text-transform: capitalize;
+//     }
+//   }
+// }
