added breadcrumb nav

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -2,7 +2,7 @@
   <div class="c-map-breadcrumbs">
     <div class="row">
       <div class="column small-12">
-
+        <div id="breadcrumbs"></div>
       </div>
     </div>
   </div>
