--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,14 @@
 <div class="l-footer">
-  <div class="wrapper">
-    <div class="container">
+  <div class="row">
+    <div class="column small-12 medium-6">
       <ul class="medias">
         <li class="-big"><%= t 'follow_us' %></li>
         <li class="-notext -linkedin"><a href="https://www.linkedin.com/topic/global-oncology" target="_blank" rel="noreferrer" title="Linked In">Linked In</a></li>
         <li class="-notext -twitter"><a href="https://twitter.com/globalonc" target="_blank" rel="noreferrer" title="Twitter">Twitter</a></li>
         <li class="-notext -facebook"><a href="https://www.facebook.com/globalonc" target="_blank" rel="noreferrer" title="Facebook">Facebook</a></li>
       </ul>
+    </div>
+    <div class="column small-12 medium-6">
       <ul class="menu">
         <li><%= link_to (t 'download'), download_user_manual_path, class: "-color-1", download: 'User Manual', data: {turbolinks: false}, title: "User Manual" %></a></li>
         <li><%= link_to (t 'map'), map_path %></a></li>
