changes api query to countries iso

--- a/app/sql_queries/projects_map_countries.sql.erb
+++ b/app/sql_queries/projects_map_countries.sql.erb
@@ -28,7 +28,7 @@ from projects
     <% end %>
     where projects.status = 1
     <% if @params[:countries] %>
-      and countries.id in     <%= "#{'(' + @params[:countries].join(',') + ')'}" %>
+      and countries.country_iso in      <%= @params[:countries].to_s.gsub('[', '(').gsub(']',')').gsub('"',"'") %>
     <% end %>
     <% if @params[:organizations] %>
       and organizations.id in <%= "#{'(' + @params[:organizations].join(',') + ')'}" %>
