Styles: select styles using select2

--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -14,7 +14,7 @@
   </div>
   <div class="row">
     <div class="column small-12 medium-6">
-      <div id="cancer-types"></div>
+      <div id="cancer-types" class="c-select"></div>
     </div>
     <div class="column small-12 medium-6">
       {{{organisations}}}
@@ -22,7 +22,7 @@
   </div>
   <div class="row">
     <div class="column small-12 medium-6">
-      <div id="project-types"></div>
+      <div id="project-types" class="c-select"></div>
     </div>
     <div class="column small-12 medium-6">
       {{{foundingSources}}}
