--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 //= require custom-foundation
 //= require leaflet
-//= require chosen
+//= require select2
 //= require pickadate/classic
 //= require pickadate/classic.date
 
@@ -8,7 +8,6 @@
   "settings",
   "fonts",
   "base",
-  "chosen",
   "mixins",
   "layouts/*",
   "components/*";
