--- a/app/assets/stylesheets/components/_select.scss
+++ b/app/assets/stylesheets/components/_select.scss
@@ -75,8 +75,9 @@
 	}
 
 	.select2-results__option[aria-selected=true] {
-		background: $color-1 !important;
-		color: $color-3 !important;
+    display: none;
+		background: $color-1;
+		color: $color-3;
 	}
 
   .select2-results__option--highlighted[aria-selected] {
