Styles: select styles

--- a/app/assets/javascripts/templates/form/select.hbs
+++ b/app/assets/javascripts/templates/form/select.hbs
@@ -12,6 +12,7 @@
   {{#if inputClass}}class="{{inputClass}}"{{/if}}
   {{#if value}}value="{{value}}"{{/if}}
   {{#if required}}required="true"{{/if}}
+  {{#if placeholder}}data-placeholder="{{placeholder}}"{{/if}}
 >
   {{#if addNew}}
     <option id="add-new-{{name}}" class="add-new">Add new</option>
