--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,6 +1,6 @@
 <div class="c-section-intro">
   <div class="c-map-breadcrumbs">
-    <div class="row">
+    <div class="row collapse">
       <div class="column small-12">
         <div id="breadcrumbs"></div>
       </div>
@@ -13,7 +13,7 @@
   <!-- <div id="map-tooltip" class="c-map-tooltip"></div> -->
 
   <div id="dataTabNav" class="c-tabnav">
-    <div class="row">
+    <div class="row collapse">
       <div class="column small-12">
         <ul class="tabnav-list">
            <% @filters.each do |filter| %>
@@ -29,7 +29,7 @@
 </div>
 
 
-<div id="map-layers-tooltip" class="c-tooltip -tip-left"></div>
+<!-- <div id="map-layers-tooltip" class="c-tooltip -tip-left"></div> -->
 
 <!-- toolbar -->
 <div id="toolbar" class="c-toolbar"></div>
