--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="l-footer">
-  <div class="row">
+  <div class="row collapse">
     <div class="column small-12 medium-6">
       <ul class="medias">
         <li class="-big"><%= t 'follow_us' %></li>
