--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="l-header">
   <div class="desktop-menu">
-    <div class="row align-middle">
+    <div class="row collapse align-middle">
       <div class="column small-4 medium-4">
         <div class="logo">
           <%= link_to(home_path) do %>
@@ -13,54 +13,4 @@
       </div>
     </div>
   </div>
-
-  <div class="mobile-drawer js-mobile-drawer">
-    <ul class="menu">
-      <% if user_signed_in? %>
-          <li class="user-avatar">
-            <div class="c-user-profile-picture -big <%= @isProfile ? "-active" : "" %>">
-              <div class="initials">LK</div>
-              <!-- <img src="" alt="{User name}'s profile picture'" /> -->
-              <!-- Notifications to set (set element on mobile too) -->
-              <% if true %>
-                <div class="c-badge">7</div>
-              <% end %>
-            </div>
-          </li>
-        <% else %>
-          <li class="<%= active_page?(user_session_path) ? '-active' : '' %>"><%= link_to (t 'login'), user_session_path %></a></li>
-        <% end %>
-      <li class="<%= active_page?(map_path) ? '-active' : '' %>"><%= link_to (t 'map'), map_path %></a></li>
-      <li class="<%= active_page?(countries_path) ? '-active' : '' %>"><%= link_to (t 'countries'), countries_path %></a></li>
-      <!-- <li class="<%#= active_page?(cancers_path) ? '-active' : '' %>"><%#= link_to (t 'cancer_types'), cancers_path %></a></li> -->
-      <li class="<%= active_page?(about_path) ? '-active' : '' %>"><%= link_to (t 'about'), about_path %></a></li>
-    </ul>
-    <% if user_signed_in? %>
-      <ul class="menu user-profile">
-        <li class="item"><%= link_to (t 'your_profile'), user_path(current_user), {:class => "item-link", :method => :get} %></li>
-        <li class="item"><%= link_to (t 'logout'), destroy_user_session_path, {:class => "item-link", :method => :delete} %></li>
-      </ul>
-
-      <ul class="menu user-tools -color-1">
-        <li class="item"><%= link_to (t 'add_project'), new_user_project_path(current_user), {:class => "item-link", :method => :get} %></li>
-        <li class="item"><%= link_to (t 'add_event'), new_user_event_path(current_user), {:class => "item-link", :method => :get} %></li>
-      </ul>
-    <% end %>
-  </div>
-
-  <div class="wrapper">
-    <div class="mobile-menu">
-      <div class="logo">
-        <%= link_to(home_path) do %>
-          <h1>Global cancer project map</h1>
-        <% end %>
-      </div>
-      <div class="hamburger-menu js-hamburger-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </div>
-
 </div>
