--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="column small-12 medium-6">
-      {{{countries}}}
+      <div id="countries" class="c-select"></div>
     </div>
     <div class="column small-12 medium-6">
       {{{organisationsTypes}}}
