Map: single selects styles

--- a/app/assets/javascripts/templates/form/select.hbs
+++ b/app/assets/javascripts/templates/form/select.hbs
@@ -18,7 +18,7 @@
     <option id="add-new-{{name}}" class="add-new">Add new</option>
   {{/if}}
   {{#if blank}}
-    <option>{{blank}}</option>
+    <option></option>
   {{/if}}
   {{#each options}}
     <option value="{{value}}" {{#if selected}}selected{{/if}}>{{name}}</option>
