--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -17,7 +17,7 @@
       <div id="cancer-types" class="c-select"></div>
     </div>
     <div class="column small-12 medium-6">
-      {{{organisations}}}
+      <div id="organizations" class="c-select"></div>
     </div>
   </div>
   <div class="row">
