--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -42,6 +42,18 @@
 
 <!-- c-grid-proyects -->
 <div class="c-card-grid" id="content">
-  <%= render(:partial => @current_type) %>
+  <%= render('map/' + @current_type) %>
 </div>
 
+<div class="c-card-grid">
+<% @realLimit = params['limit'] ? params['limit'].to_i : 1 %>
+  <% if (@realLimit * @limit) < @projectsCount %>
+    <div class="c-pagination-button">
+      <%= link_to (t 'show_more'),
+              map_path(request.query_parameters.merge({ limit: (params['limit'] ? params['limit'].to_i + 1 : 2 )  })),
+              class: "circle-button",
+              remote: true,
+              data: {magic: true} %>
+    </div>
+  <% end %>
+</div>
