--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -9,7 +9,7 @@
       <div id="countries" class="c-select"></div>
     </div>
     <div class="column small-12 medium-6">
-      {{{organisationsTypes}}}
+      <div id="organization-types" class="c-select"></div>
     </div>
   </div>
   <div class="row">
@@ -25,9 +25,24 @@
       <div id="project-types" class="c-select"></div>
     </div>
     <div class="column small-12 medium-6">
-      {{{foundingSources}}}
+      <div id="funding-sources" class="c-select"></div>
     </div>
   </div>
+
+
+  <div class="row">
+    <div class="column small-12 medium-6">
+      <div id="pickadate-start" class="c-pickadate"></div>
+    </div>
+    <div class="column small-12 medium-6">
+      <div class="c-pickadate">
+        <label for="pickadate-end-input">End date</label>
+        <input type="text" name="end_date" id="pickadate-end-input" class="pickadate-input" value="{{end_date}}">
+        <div id="pickadate-end-container" class="pickadate-container"></div>
+      </div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="column small-12">
       <button type="button" class="js-filter-form-cancel">Cancel</button>
