--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -35,11 +35,7 @@
       <div id="pickadate-start" class="c-pickadate"></div>
     </div>
     <div class="column small-12 medium-6">
-      <div class="c-pickadate">
-        <label for="pickadate-end-input">End date</label>
-        <input type="text" name="end_date" id="pickadate-end-input" class="pickadate-input" value="{{end_date}}">
-        <div id="pickadate-end-container" class="pickadate-container"></div>
-      </div>
+      <div id="pickadate-end" class="c-pickadate"></div>
     </div>
   </div>
 
