--- a/app/assets/javascripts/templates/form/pickadate.hbs
+++ b/app/assets/javascripts/templates/form/pickadate.hbs
@@ -1,3 +1,5 @@
-<label for="pickadate-end-input">End date</label>
-<input type="text" name="end_date" id="pickadate-end-input" class="pickadate-input" value="{{end_date}}">
-<div id="pickadate-end-container" class="pickadate-container"></div>
+<label for="{{name}}">
+  {{label}}
+</label>
+<input type="text" name="{{name}}" id="{{name}}" class="pickadate-input" value="">
+<div id="{{name}}-container" class="pickadate-container"></div>
