--- a/app/assets/stylesheets/components/_pickadate.scss
+++ b/app/assets/stylesheets/components/_pickadate.scss
@@ -1,5 +1,9 @@
 .c-pickadate {
-	
+
+  label {
+    text-align: center;
+  }
+
 	.pickadate-input {
 		display: none;
 	}
@@ -19,21 +23,21 @@
 			.picker-holder-custom {
 				&:focus {
 					outline: none;
-				}				
+				}
 			}
 
 			// Year && month selectors
 			.picker__select--year,
 			.picker__select--month {
 				appearance: none;
-				margin: 0px 2px;				
+				margin: 0px 2px;
 				padding: 0 5px;
 				width: auto;
 				border: none;
 				background: none;
 				text-transform: uppercase;
 				color: $color-1;
-				
+
 				cursor: pointer;
 				font-family: inherit;
 				font-weight: $font-weight-bold;
