--- a/app/assets/stylesheets/components/_pickadate.scss
+++ b/app/assets/stylesheets/components/_pickadate.scss
@@ -1,7 +1,11 @@
 .c-pickadate {
 
   label {
+    display: block;
     text-align: center;
+    text-transform: uppercase;
+    font-weight: $font-weight-bold;
+    font-size: $font-size-x-small;
   }
 
 	.pickadate-input {
