Filters: some style amendment

--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -41,8 +41,8 @@
 
   <div class="row">
     <div class="column small-12">
-      <button type="button" class="js-filter-form-cancel">Cancel</button>
-      <button type="submit" class="js-filter-form-submit">Apply</button>
+      <button type="button" class="c-button -filled -inverse js-filter-form-cancel">Cancel</button>
+      <button type="submit" class="c-button -filled js-filter-form-submit">Apply</button>
     </div>
   </div>
 </form>
