--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -1,7 +1,7 @@
-<form action="#">
+<form class="c-grid" action="#">
   <div class="row">
     <div class="column small-12">
-      <h2>Filters</h2>
+      <h2 class="c-title">Filters</h2>
     </div>
   </div>
   <div class="row">
@@ -41,8 +41,10 @@
 
   <div class="row">
     <div class="column small-12">
-      <button type="button" class="c-button -filled -inverse js-filter-form-cancel">Cancel</button>
-      <button type="submit" class="c-button -filled js-filter-form-submit">Apply</button>
+      <div class="c-button-container -j-center -a-center">
+        <button type="button" class="c-button -filled -inverse js-filter-form-cancel">Cancel</button>
+        <button type="submit" class="c-button -filled js-filter-form-submit">Apply</button>
+      </div>
     </div>
   </div>
 </form>
