--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -12,3 +12,49 @@
     clear: both;
   }
 }
+
+
+// Keyframes
+@mixin keyframes($name) {
+  @-o-keyframes $name { @content };
+  @-moz-keyframes $name { @content };
+  @-webkit-keyframes $name { @content };
+  @-keyframes $name { @content };
+}
+
+
+// Animation
+@mixin animation($name,$duration,$count: 1,$function: linear,$direction: normal,$fill : none,$delay : 0s, $play: running){
+  -webkit-animation-name: $name;
+  -webkit-animation-duration: $duration;
+  -webkit-animation-iteration-count: $count;
+  -webkit-animation-timing-function: $function;
+  -webkit-animation-direction: $direction;
+  -webkit-animation-fill-mode:$fill;
+  -webkit-animation-delay:$delay;
+  -webkit-animation-play-state: $play;
+  -moz-animation-name: $name;
+  -moz-animation-duration: $duration;
+  -moz-animation-iteration-count: $count;
+  -moz-animation-timing-function: $function;
+  -moz-animation-direction: $direction;
+  -moz-animation-fill-mode:$fill;
+  -moz-animation-delay:$delay;
+  -moz-animation-play-state: $play;
+  -ms-animation-name: $name;
+  -ms-animation-duration: $duration;
+  -ms-animation-iteration-count: $count;
+  -ms-animation-timing-function: $function;
+  -ms-animation-direction: $direction;
+  -ms-animation-fill-mode:$fill;
+  -ms-animation-delay:$delay;
+  -ms-animation-play-state: $play;
+  animation-name: $name;
+  animation-duration: $duration;
+  animation-iteration-count: $count;
+  animation-timing-function: $function;
+  animation-direction: $direction;
+  animation-fill-mode:$fill;
+  animation-delay:$delay;
+  animation-play-state: $play;
+}
