--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -35,18 +35,20 @@
 
 .c-button {
   display: inline-block;
-  padding: 10px 30px;
+  padding: 16px 30px;
   font-size: $font-size-x-small;
   font-weight: $font-weight-bold;
   text-transform: uppercase;
   color: $color-1;
   border: 1px solid rgba($color-1, .3);
+  border-radius: 0;
   background: transparent;
   /* The cursor property needs to be specified for the buttons made with a
    * "button" HTML markup */
   cursor: pointer;
   transition: box-shadow .15s, border .15s;
   text-align: center;
+
 
   &:hover { border-color: $color-1; }
   &:active { background: rgba($color-1, .06); }
@@ -103,10 +105,16 @@
     &.-filled {
       background: $color-3;
       color: $color-1;
-      border-color: $color-3;
+      border-color: $color-1;
 
-      &.-color-2 { color: $color-6; }
-      &.-color-3 { color: $color-4; }
+      &.-color-2 {
+        border-color: $color-6;
+        color: $color-6;
+      }
+      &.-color-3 {
+        border-color: $color-4;
+        color: $color-4;
+      }
     }
   }
 
