--- a/app/assets/stylesheets/components/_badge.scss
+++ b/app/assets/stylesheets/components/_badge.scss
@@ -17,6 +17,10 @@
   font-size: $font-size-tiny;
   color: $color-3;
   font-weight: $font-weight-bold;
+  position: relative;
+  top: -60px;
+  left: 35px;
+  box-shadow: 0px 1px 1px rgba(255,255,255,.5);
 
   &.-color-2 {
     background-color: $color-6;
