--- a/app/views/shared/_main_nav.html.erb
+++ b/app/views/shared/_main_nav.html.erb
@@ -12,16 +12,19 @@
   <!-- <li><img src="" class="btn-search"></li> -->
 
   <% if user_signed_in? %>
-    <li class="user-item">
+    <script>
+      var user_data = <%= "#{@user_data.to_json}".html_safe %>;
+    </script>
+    <li class="user-item" id="UserNav">
       <div class="c-user-profile-picture <%= @isProfile ? "-active" : "" %>">
-        <div class="initials"><%= current_user.name ? current_user.name[0] : 'U' %></div>
+        <div class="initials"></div>
         <!-- <img src="" alt="{User name}'s profile picture'" /> -->
         <!-- Notifications to set (set element on mobile too) -->
         <% if true %>
-          <div class="c-badge">7</div>
+          <div class="c-badge"></div>
         <% end %>
       </div>
-      <!-- <div class="c-user-dropdown-menu js-user-dropdown-menu">
+      <div class="c-user-dropdown-menu js-user-dropdown-menu">
         <ul class="user-profile menu-section">
           <li class="item"><%= link_to (t 'your_profile'), user_path(current_user), {:class => "item-link", :method => :get} %></li>
           <li class="item"><%= link_to (t 'logout'), destroy_user_session_path, {:class => "item-link", :method => :delete} %></li>
@@ -31,7 +34,7 @@
           <li class="item"><%= link_to (t 'add_project'), new_user_project_path(current_user), {:class => "item-link", :method => :get} %></li>
           <li class="item"><%= link_to (t 'add_event'), new_user_event_path(current_user), {:class => "item-link", :method => :get} %></li>
         </ul>
-      </div> -->
+      </div>
     </li>
   <% else %>
     <li class="<%= active_page?(user_session_path) ? '-active' : '' %>"><%= link_to (t 'login'), user_session_path %></a></li>
