--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -67,3 +67,15 @@ a, button {
     outline: 0;
   }
 }
+
+.row {
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @media #{$mq-mobile-large} {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  &.-no-pad { padding: 0; }
+}
