--- a/app/assets/stylesheets/components/_user-dropdown-menu.scss
+++ b/app/assets/stylesheets/components/_user-dropdown-menu.scss
@@ -60,11 +60,12 @@
       padding: 0;
       margin: 0;
 
-      > .item-link {
+      > .item-link,
+      > .sum {
         display: inline-block;
 
         width: 100%;
-        padding: 15px 10px 15px 30px;
+        padding: 15px 15px 15px 30px;
 
         font-family: $font-family-1;
         line-height: $font-size-x-small;
@@ -74,6 +75,12 @@
 
         &:hover {
           opacity: .6;
+        }
+      }
+      > .sum {
+        text-align: justify;
+        span {
+          float: right;
         }
       }
     }
