--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -1,7 +1,6 @@
 .l-header {
   position: relative;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 12px 25px;
 
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.05);
 
