--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -58,15 +58,7 @@
 			}
 		}
 	}
-	// .split-about {
-	// 	display: block;
-	// 	width: calc(100% + 100px);
-	// 	position: relative;
-  //  left: -50px;
-  //  height: 1px;
-	// 	border: solid 1px rgba(0, 0, 0, 0.1);
-	// 	margin: 0 0 50px;
-	// }
+
 	p {
 		display: block;
 		clear: both;
@@ -74,6 +66,8 @@
 		a {
 			color: #5aade4;
 			font-weight: bold;
+
+      &:hover { opacity: .6; }
 		}
 	}
 }
