Delimiter line to borders

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -9,7 +9,7 @@
 	</div>
   <div class="row">
     <div class="column small-12 medium-12">
-	     <h2>Examples of what a user can do through the GCPM are:</h2>
+	    <h2>Examples of what a user can do through the GCPM are:</h2>
     	<ul class="row -no-pad">
     		<li class="column small-12 medium-4"><span class="icon -share"></span>Share cancer-related projects and events with the global oncology community</li>
     		<li class="column small-12 medium-4"><span class="icon -search"></span>Search for people, projects, and events in a specific country or as related to a specific cancer type</li>
@@ -17,8 +17,9 @@
     		<li class="column small-12 medium-4"><span class="icon -view"></span>View epidemiological heat maps that show cancer burden by country</li>
     		<li class="column small-12 medium-4"><span class="icon -more"></span>And more!</li>
     	</ul>
-    <div>
+    </div>
   </div>
+  <span class="delimiter"></span>
   <div class="row -no-pad">
     <div class="column small-12 medium-9">
     	<p>For more suggestions on how to get started using the GCPM, see the <a href="#">FAQ</a>.</p>
