--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -22,8 +22,13 @@
 	}
 
   ul {
-    border-bottom: 3px solid rgba(0, 0, 0, 0.10);
     padding-bottom: 40px;
+  }
+
+  .delimiter {
+    display: inline-block;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.10);
+    width: 100%;
     margin-bottom: 50px;
   }
 
