row padding fit

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -20,7 +20,7 @@
     </div>
   </div>
   <span class="delimiter"></span>
-  <div class="row -no-pad">
+  <div class="row">
     <div class="column small-12 medium-9">
     	<p>For more suggestions on how to get started using the GCPM, see the <a href="#">FAQ</a>.</p>
     	<p>If you would like to contribute to the Global Cancer Project Map, or provide feedback to the management team, we can be reached at <a href="mailto:data@globalonc.org">data@globalonc.org</a>.</p>
