--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -72,7 +72,7 @@ a, button {
   padding-left: 15px;
   padding-right: 15px;
 
-  @media #{$mq-mobile-large} {
+  @media #{$mq-tablet} {
     padding-left: 60px;
     padding-right: 60px;
   }
