--- a/app/views/shared/_main_nav.html.erb
+++ b/app/views/shared/_main_nav.html.erb
@@ -16,15 +16,13 @@
       var user_data = <%= "#{@user_data.to_json}".html_safe %>;
     </script>
     <li class="user-item" id="UserNav">
-      <div class="c-user-profile-picture <%= @isProfile ? "-active" : "" %>">
+      <div class="c-user-profile-picture <%= @isProfile ? "-active" : "" %> userMenu">
         <div class="initials"></div>
         <!-- <img src="" alt="{User name}'s profile picture'" /> -->
         <!-- Notifications to set (set element on mobile too) -->
-        <% if true %>
-          <div class="c-badge"></div>
-        <% end %>
+        <div class="c-badge"></div>
       </div>
-      <div class="c-user-dropdown-menu js-user-dropdown-menu">
+      <div class="c-user-dropdown-menu js-user-dropdown-menu userMenuDropDown">
         <ul class="user-profile menu-section">
           <li class="item"><%= link_to (t 'your_profile'), user_path(current_user), {:class => "item-link", :method => :get} %></li>
           <li class="item"><%= link_to (t 'logout'), destroy_user_session_path, {:class => "item-link", :method => :delete} %></li>
@@ -34,9 +32,7 @@
           <li class="item"><%= link_to (t 'add_project'), new_user_project_path(current_user), {:class => "item-link", :method => :get} %></li>
           <li class="item"><%= link_to (t 'add_event'), new_user_event_path(current_user), {:class => "item-link", :method => :get} %></li>
         </ul>
-        <ul class="user-stats menu-section">
-          <li class="item"><span class="sum prj"></span></li>
-          <li class="item"><span class="sum evn"></span></li>
+        <ul class="user-stats menu-section proj-even">
         </ul>
       </div>
     </li>
