--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,5 +1,5 @@
-<section class="wrapper" id="about-content">
-	<div class="header-about">
+<section id="about-content">
+	<div class="header-about wrapper">
     <div class="row">
       <div class="column small-12 medium-9">
     		<h1 class="c-title -huge">About</H1>
@@ -7,7 +7,7 @@
       </div>
     </div>
 	</div>
-  <div class="row">
+  <div class="row wrapper">
     <div class="column small-12 medium-12">
 	    <h2>Examples of what a user can do through the GCPM are:</h2>
     	<ul class="row -no-pad">
@@ -20,7 +20,7 @@
     </div>
   </div>
   <span class="delimiter"></span>
-  <div class="row">
+  <div class="row wrapper">
     <div class="column small-12 medium-9">
     	<p>For more suggestions on how to get started using the GCPM, see the <a href="#">FAQ</a>.</p>
     	<p>If you would like to contribute to the Global Cancer Project Map, or provide feedback to the management team, we can be reached at <a href="mailto:data@globalonc.org">data@globalonc.org</a>.</p>
