--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="l-footer">
+<div class="l-footer wrapper">
   <div class="row collapse">
     <div class="column small-12 medium-6">
       <ul class="medias">
