--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="l-header">
+<div class="l-header wrapper">
   <div class="desktop-menu">
     <div class="row collapse align-middle">
       <div class="column small-4 medium-4">
