--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -5,8 +5,9 @@
 		min-height: 315px;
 		background-color: #68299b;
 		color: #fff;
-		padding: 50px 0;
-    margin-bottom: 50px;
+    padding-top: 50px;
+		padding-bottom: 50px;
+    margin-bottom: 75px;
 
 		h1 {
       margin-top: 0;
